# chess-agent

./: .gitignore  AGENTS.md  ARTICLE.md  README.md  docker-compose.yml  moves.json
ai-engine/: .env.example  AGENTS.md  pyproject.toml
ai-engine/app/: container.py  main.py
ai-engine/app/agent/: agent.py  agent_graph.py
ai-engine/app/agent/contracts/: agent_interface.py
ai-engine/app/configs/: settings.py
ai-engine/app/routers/: __init__.py  game_router.py
ai-engine/app/routers/contracts/: game_interface.py
ai-engine/app/services/: game_service.py
backend/: .env.example  AGENTS.md  package-lock.json  package.json  tsconfig.json
backend/src/: app.module.ts
backend/src/database/: database.module.ts
backend/src/database/entities/: game.entity.ts
backend/src/game/: game.module.ts
backend/src/game/contracts/: game.interface.ts
backend/src/game/controllers/: game.controller.ts
backend/src/game/dto/: make-move.dto.ts  new-game.dto.ts
backend/src/game/services/: agent.service.ts  game.service.ts
backend/src/redis/services/: redis.service.ts
frontend/: AGENTS.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ChatArea.tsx  ChessBoard.tsx  ChessGame.tsx  GameHistory.tsx  GameSetup.tsx  MoveList.tsx  PreGameView.tsx
frontend/src/lib/: api.ts
frontend/src/types/: game.ts
